--- a/app/src/main/res/layout/mypage_layout.xml
+++ b/app/src/main/res/layout/mypage_layout.xml
@@ -15,30 +15,23 @@
         app:srcCompat="@drawable/ic_account"
         />
 
+
     <TextView
-        android:id="@+id/text_level"
+        android:id="@+id/text_myreview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="내가 작성한 리뷰"
         android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft = '10dp'
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/text_myreview"
+        app:layout_constraintBottom_toTopOf="@+id/review_table"
         />
 
-    <TextView
-        android:id="@+id/text_myreview"
-        android:layout_width="253dp"
-        android:layout_height="219dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:text="리뷰 제목"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/mypage_postbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
 
-        />
+
+
 
 
 
@@ -97,6 +90,51 @@
         app:srcCompat="@drawable/ic_rank" />
 
 
+
+    <GridLayout
+        android:id="@+id/review_table"
+        android:layout_width="409dp"
+        android:layout_height="250dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="201dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/mypage_rankbtn"
+        >
+        <ImageView
+            android:id="@+id/myreview_image1"
+            android:layout_width="200dp"
+            android:layout_height="125dp"
+            app:srcCompat="@drawable/review_sample2"
+            />
+        <ImageView
+            android:id="@+id/myreview_image2"
+            android:layout_width="200dp"
+            android:layout_height="125dp"
+            app:srcCompat="@drawable/review_sample3"
+            />
+        <ImageView
+            android:id="@+id/myreview_image3"
+            android:layout_width="200dp"
+            android:layout_height="125dp"
+            app:srcCompat="@drawable/review_sample4"
+            />
+        <ImageView
+            android:id="@+id/myreview_image4"
+            android:layout_width="200dp"
+            android:layout_height="125dp"
+            app:srcCompat="@drawable/review_sample5"
+            />
+
+
+
+
+
+
+    </GridLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
