--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -1,58 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/login_background"
+    android:gravity="center"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signup_text"
-        android:text="Signup_page" />
+        android:text="시작하기" />
 
     <EditText
         android:id="@+id/user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
+        android:textColor="#fff"
+        android:textColorHint="#eee"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/borderline"
+        android:textSize="17sp"
         android:inputType="textPersonName"
-        android:hint="아이디 입력"/>
+        android:hint="ID"
+
+        />
     <EditText
         android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
+        android:textColor="#fff"
+        android:textColorHint="#eee"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/borderline"
+        android:textSize="17sp"
         android:inputType="textPersonName"
         android:hint="이름 입력"/>
+
     <EditText
         android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
+        android:textColor="#fff"
+        android:textColorHint="#eee"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/borderline"
+        android:textSize="17sp"
         android:inputType="textEmailAddress"
         android:hint="메일입력"/>
+
     <EditText
         android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
+        android:textColor="#fff"
+        android:textColorHint="#eee"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/borderline"
+        android:textSize="17sp"
         android:inputType="textPassword"
         android:hint="비번 입력"/>
+
     <EditText
         android:id="@+id/password_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
+        android:textColor="#fff"
+        android:textColorHint="#eee"
+        android:paddingStart="10dp"
+        android:paddingLeft="10dp"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/borderline"
+        android:textSize="17sp"
         android:inputType="textPassword"
         android:hint="비번 확인"/>
     <Button
         android:id="@+id/signup_btn"
-        android:layout_width="match_parent"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SignUp"
+        android:background="@drawable/borderline"
         />
 </LinearLayout>
